# repopack

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-start.sh
frontend/: Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/github/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FileScoringOptions.tsx  FileScoringResults.tsx  FileUploader.tsx  GitHubForm.tsx  ProcessingProgress.tsx  ProcessingStatus.tsx  ResultDisplay.tsx  SummarizationOptions.tsx
frontend/lib/: repomix-api.ts
include/: code_ner.hpp  file_processor.hpp  file_scorer.hpp  pattern_matcher.hpp  progress_tracker.hpp  repomix.hpp  tokenizer.hpp  tree_sitter_types.hpp
src/: CMakeLists.txt  code_ner.cpp  file_processor.cpp  file_scorer.cpp  main.cpp  pattern_matcher.cpp  repomix.cpp  server.cpp  tiktoken_cpp.hpp.in  tokenizer.cpp
test/: CMakeLists.txt  file_processor_test.cpp  main_test.cpp  pattern_matcher_test.cpp
